First homework solution.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <h1>Hello world!<h1/>
+    <h1>Coder or gamer ?
+        <h1/>
 </head>
+
 <body style="text-align: center">
-    <img src="https://marketing-prod.global.ssl.fastly.net/sites/default/files/2017-03/GA_Coding_2x_2.jpg"/>
+    <img id="floatingImg" src="http://pngimg.com/uploads/hello/hello_PNG28.png" />
+    <br/>
+    <button id="coderBtn">Coder</button>
+    <button id="gamerBtn">Gamer</button>
 </body>
-<footer>deivid7007</footer>
+<script src="jquery-3.3.1.min.js"></script>
+<script src="script.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 </html>
