--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <h1>Coder or gamer ?
-        <h1/>
+    <h1>Coder or gamer ?<h1/>
 </head>
 
 <body style="text-align: center">
@@ -12,7 +11,7 @@
     <button id="coderBtn">Coder</button>
     <button id="gamerBtn">Gamer</button>
 </body>
-<script src="jquery-3.3.1.min.js"></script>
-<script src="script.js"></script>
-<link rel="stylesheet" type="text/css" href="style.css">
+<script src="scripts/jquery-3.3.1.min.js"></script>
+<script src="scripts/script.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </html>
