Added bootstrap libraly in the project.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <h1>Coder or gamer ?<h1/>
+    <h1>Coder or gamer ?
+        <h1/>
 </head>
 
 <body style="text-align: center">
@@ -13,5 +14,10 @@
 </body>
 <script src="scripts/jquery-3.3.1.min.js"></script>
 <script src="scripts/script.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </html>
